--- a/index.html
+++ b/index.html
@@ -157,131 +157,139 @@
                 </div>
             </div>
         </section>
+
+        <!-- Shoes -->
+        <Section class="container my-5">
+            <h1>
+                Shoes
+            </h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height
+                                action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Section>
+        <!-- Bags -->
+        <Section class="container my-5">
+            <h1>
+                Bags
+            </h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height
+                                action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Section>
+        <!-- categories end -->
+
+        <!-- Subscribe started -->
+        <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+
+                <form>
+                    <div class="mb-1">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!-- Subscribe end -->
     </main>
-    <!-- Shoes -->
-    <Section class="container my-5">
-        <h1>
-            Shoes
-        </h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike 360</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.
-                        </p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Red Airmax</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </Section>
-    <!-- Bags -->
-    <Section class="container my-5">
-        <h1>
-            Bags
-        </h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Red Laltu Bag</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike 360</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.
-                        </p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card border border-0 shadow-lg h-100">
-                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Red Airmax</h5>
-                        <h1>$160</h1>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
-                    </div>
-                    <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </Section>
-    <!-- categories end -->
-
-    <!-- Subscribe started -->
-    <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5">
-        <div>
-            <h2>LET'S STAY IN TOUCH</h2>
-            <p>Get updates on sales, specials and more</p>
-
-            <form>
-                <div class="mb-3">
-
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </section>
-    <!-- Subscribe end -->
+    <footer class="text-center">
+        <p>
+            <small>
+                ©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+            </small>
+        </p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
